manageiq-apb/roles/manageiq-apb-openshift/files/manageiq-memcached-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq-apb
    service: manageiq-memcached
  name: manageiq-memcached
spec:
  ports:
  - name: port-11211
    port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: manageiq-apb
    service: manageiq-memcached
  sessionAffinity: None
  type: ClusterIP
