manageiq-apb/roles/manageiq-apb-openshift/files/manageiq-app-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: manageiq-apb
    service: manageiq-app
  name: manageiq-app
spec:
  port:
    targetPort: port-443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: manageiq-app
    weight: 100
